feat: add redis cache
